<resources>
    <string name="app_name">游戏计时器</string>
    <string name="test">Test</string>
    <string name="setting">设置</string>
    <string name="popup_windows_chinese_chess_setting_time_label">时间:</string>
    <string name="popup_windows_chinese_chess_setting_strict_mode_label">严格模式:</string>
    <string name="popup_windows_chinese_chess_setting_sound_per_second_label">每秒提示音:</string>
    <string name="popup_windows_chinese_chess_setting_painted_eggshell_label">彩蛋:</string>
    <string name="popup_windows_chinese_chess_setting_time_hint">每人每回合时间</string>
    <string name="confirm_and_save">确认并保存</string>
    <string name="close">关闭</string>
    <string name="title_home">主页</string>
    <string name="title_about">关于</string>
    <string name="version">版本</string>
    <string name="github">在 Github 上查看</string>
    <string name="licence">许可证</string>
    <string name="privacy_agreement">隐私协议</string>
    <string name="author">作者</string>

    <string name="describe_app_icon">软件图标</string>
    <string name="describe_app_version">版本图标</string>
    <string name="describe_github">github图标</string>
    <string name="describe_app_licence">许可证图标</string>
    <string name="describe_app_privacy_agreement">隐私协议图标</string>
    <string name="describe_app_author_github">作者的github</string>

    <style name="GameTimer.TextAppearance" parent="@style/TextAppearance.AppCompat.Widget.Switch">
        <item name="android:textSize">8sp</item>
        <item name="android:textColor">#000</item>
    </style>
</resources>