<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".ui.fragment.AboutFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/pattern_edge"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/ic_launcher_background"
                android:contentDescription="@string/describe_app_icon"
                android:src="@drawable/ic_launcher_foreground" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/app_name"
                android:textSize="25sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/about_fragment_app_version_component"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="1dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/pattern_click"
            android:clickable="true"
            android:orientation="horizontal"
            android:paddingHorizontal="19dp">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:layout_marginEnd="35dp"
                android:contentDescription="@string/describe_app_version"
                android:src="@drawable/item_information_icon_white_24dp"
                app:tint="?colorControlNormal" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/version"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/about_fragment_app_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="11sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/about_fragment_licence_component"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="1dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/pattern_click"
            android:clickable="true"
            android:orientation="horizontal"
            android:paddingHorizontal="19dp">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:layout_marginEnd="35dp"
                android:contentDescription="@string/describe_app_licence"
                android:src="@drawable/item_text_file_icon_white_24dp"
                app:tint="?colorControlNormal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/licence"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/about_fragment_privacy_agreement_component"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="1dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/pattern_click"
            android:clickable="true"
            android:orientation="horizontal"
            android:paddingHorizontal="19dp">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:layout_marginEnd="35dp"
                android:contentDescription="@string/describe_app_privacy_agreement"
                android:src="@drawable/item_lock_icon_white_24dp"
                app:tint="?colorControlNormal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/privacy_agreement"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/pattern_edge"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/about_author_component"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="1dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/pattern_click"
            android:clickable="true"
            android:orientation="horizontal"
            android:paddingHorizontal="19dp">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:layout_marginEnd="35dp"
                android:contentDescription="@string/describe_app_author_github"
                android:src="@drawable/item_github_icon_white_24dp"
                app:tint="?colorControlNormal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/author"
                android:textSize="20sp" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>