<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/popup_windows_chinese_chess_setting_time_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="0"
            android:text="@string/popup_windows_chinese_chess_setting_time_label"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/popup_windows_chinese_chess_setting_time_input"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:autofillHints="每人每回合时间"
            android:hint="@string/popup_windows_chinese_chess_setting_time_hint"
            android:inputType="number"
            android:labelFor="@id/popup_windows_chinese_chess_setting_time_label"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/popup_windows_chinese_chess_setting_strict_mode_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="0"
            android:text="@string/popup_windows_chinese_chess_setting_strict_mode_label"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/popup_windows_chinese_chess_setting_strict_mode_switch"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:switchMinWidth="50dp"
            android:thumb="@drawable/thumb"
            app:showText="true"
            app:switchTextAppearance="@style/GameTimer.TextAppearance" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/popup_windows_chinese_chess_setting_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/confirm_and_save" />
    </LinearLayout>
</LinearLayout>